--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -88,7 +88,7 @@ jobs:
         cd test/unittest
         mkdir build
         cd build
-        cmake .. -DCMAKE_CXX_STANDARD=$STDCXX
+        cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_CXX_STANDARD=$STDCXX
         make
 
     - name: Perform CodeQL Analysis
