--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -90,7 +90,10 @@ jobs:
         cd build
         cmake ..
         make
-
+      env:
+        CXX: clang++
+        GTEST_COLOR: "1"
+          
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
